--- a/android/app/src/main/res/layout/fragment_photo_view.xml
+++ b/android/app/src/main/res/layout/fragment_photo_view.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="3">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/map_holder"
@@ -10,15 +11,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:clickable="true"
-        android:layout_weight="0.50" />
+        android:layout_weight="1" />
 
     <LinearLayout
+        android:id="@+id/photo_list_linear"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:clickable="true"
         android:background="@color/darkGreyTransparent"
-        android:layout_weight="0.50" >
+        android:layout_weight="2" >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/photo_list"
