--- a/android/app/src/main/res/layout/fragment_cde_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_data_view.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="166dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:clickable="true"
     android:background="@color/backgroundTransparent">
@@ -22,7 +22,7 @@
         android:layout_marginTop="10dp" />
 
         <TableLayout
-            style="@style/TextViewCDETableParent"
+            style="@style/TextViewDataTableParent"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/cde_table"
             android:layout_width="match_parent"
@@ -32,17 +32,14 @@
                 <TextView
                     android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableParent"
-                    android:text="@string/cde_table_classification_value"
-                    android:gravity="center"/>
+                    style="@style/TextViewDataTableParent"
+                    android:text="@string/cde_table_classification_value"/>
                 <TextView
-                    style="@style/TextViewCDETableParent"
-                    android:text="@string/cde_table_classification_certainty"
-                    android:gravity="center"/>
+                    style="@style/TextViewDataTableParent"
+                    android:text="@string/cde_table_classification_certainty"/>
                 <TextView
-                    style="@style/TextViewCDETableParent"
-                    android:text="@string/cde_table_classification_year"
-                    android:gravity="center"/>
+                    style="@style/TextViewDataTableParent"
+                    android:text="@string/cde_table_classification_year"/>
             </TableRow>
 
             <TableRow
@@ -50,25 +47,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextViewCDETableParent"
+                    style="@style/TextViewDataTableParent"
                     android:id="@+id/cde_table_overall_name"
                     android:text="@string/cde_table_overall"
                     android:gravity="start"/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_overall_value"
-                    android:text=""
-                    android:gravity="center"/>
+                    android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_overall_certainty"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_overall_year"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text="" />
             </TableRow>
 
             <TableRow
@@ -76,25 +70,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextViewCDETableParent"
+                    style="@style/TextViewDataTableParent"
                     android:id="@+id/cde_table_ecological_name"
                     android:text="@string/cde_table_ecological"
                     android:gravity="start"/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_ecological_value"
-                    android:text=""
-                    android:gravity="center"/>
+                    android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_ecological_certainty"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_ecological_year"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text=""/>
             </TableRow>
 
             <TableRow
@@ -102,25 +93,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextViewCDETableParent"
+                    style="@style/TextViewDataTableParent"
                     android:id="@+id/cde_table_chemical_name"
                     android:text="@string/cde_table_chemical"
                     android:gravity="start" />
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_chemical_value"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_chemical_certainty"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text=""/>
                 <TextView
-                    style="@style/TextViewCDETableChild"
+                    style="@style/TextViewDataTableChild"
                     android:id="@+id/cde_table_chemical_year"
-                    android:text=""
-                    android:gravity="center" />
+                    android:text=""/>
             </TableRow>
         </TableLayout>
     </LinearLayout>
