--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -12,5 +12,8 @@
     <color name="darkGreyTransparent">#dd444444</color>
     <color name="backgroundDefault">#4fc3f7</color>
     <color name="backgroundTransparent">#cc4fc3f7</color>
+    <color name="wims">#00c2e8</color>
+    <color name="cde">#00c292</color>
+    <color name="photo">#ef526d</color>
 
 </resources>
