--- a/android/app/src/main/res/layout/fragment_full_photo_view.xml
+++ b/android/app/src/main/res/layout/fragment_full_photo_view.xml
@@ -72,7 +72,8 @@
                 android:text="@string/photo_tag"
                 style="?android:listSeparatorTextViewStyle"
                 android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp" />
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:id="@+id/photo_tag"
@@ -83,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="10dp" />
+                android:layout_marginBottom="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -104,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
