--- a/android/app/src/main/res/layout/fragment_wims_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_wims_data_view.xml
@@ -21,18 +21,18 @@
             android:textAlignment="center"
             android:layout_marginTop="10dp"/>
 
-        <TextView
-            android:text=""
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:id="@+id/wims_type"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_gravity="start"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp" />
+        <!--<TextView-->
+            <!--android:text=""-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:clickable="true"-->
+            <!--android:id="@+id/wims_type"-->
+            <!--android:textSize="14sp"-->
+            <!--android:textColor="@color/black"-->
+            <!--android:layout_gravity="start"-->
+            <!--android:layout_marginTop="4dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginRight="16dp" />-->
 
         <TableLayout
             style="@style/TextViewDataTableParent"
