--- a/android/app/src/main/res/layout/fragment_infoview.xml
+++ b/android/app/src/main/res/layout/fragment_infoview.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:clickable="true" >
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="true" >
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -65,36 +65,37 @@
                 android:layout_height="wrap_content"
                 android:text="@string/info_subtitle"
                 android:layout_marginTop="8dp"
-                android:layout_marginRight="16dp" />
+                android:layout_marginEnd="12dp" />
 
-            <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal" >-->
+            <TextView
+                android:id="@+id/info_description"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/info_description"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"/>
 
-                <!--<ImageView-->
-                    <!--android:id="@+id/info_spvButton"-->
-                    <!--android:gravity="start"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_weight="0.80"-->
-                    <!--android:src="@drawable/marker_white"-->
-                    <!--android:layout_marginTop="16dp"-->
-                    <!--android:layout_marginLeft="16dp"/>-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
 
-                <!--<TextView-->
-                    <!--android:id="@+id/info_spvText"-->
-                    <!--android:textColor="@color/black"-->
-                    <!--android:textSize="14sp"-->
-                    <!--android:gravity="start"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_weight="0.20"-->
-                    <!--android:text="@string/info_spvText"-->
-                    <!--android:layout_marginTop="16dp"-->
-                    <!--android:layout_marginRight="16dp" />-->
+                <TextView
+                    android:id="@+id/info_home_buttons"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/info_home_buttons"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="33dp" />
 
-             <!--</LinearLayout>-->
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -108,8 +109,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.80"
                     android:src="@drawable/target_white"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"/>
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"/>
 
                 <TextView
                     android:id="@+id/info_gpsText"
@@ -120,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.20"
                     android:text="@string/info_gpsText"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp" />
 
             </LinearLayout>
@@ -137,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.80"
                     android:src="@drawable/photo_icon"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginLeft="16dp"/>
 
                 <TextView
@@ -149,7 +150,112 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.20"
                     android:text="@string/info_camText"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="8dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/info_layers"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/info_layers"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="33dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/info_cde_layer"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_weight="0.80"
+                    android:src="@drawable/ic_cde_marker"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="16dp"/>
+
+                <TextView
+                    android:id="@+id/info_cde_description"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:text="@string/info_cde_description"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="16dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/info_wims_layer"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_weight="0.80"
+                    android:src="@drawable/ic_wims_marker"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"/>
+
+                <TextView
+                    android:id="@+id/info_wims_description"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:text="@string/info_wims_description"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="16dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/info_image_layer"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_weight="0.80"
+                    android:src="@drawable/ic_photo_marker"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"/>
+
+                <TextView
+                    android:id="@+id/info_image_description"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:gravity="start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.20"
+                    android:text="@string/info_image_description"
+                    android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="16dp"/>
 
