Fully Integrate DischargePermitDataFragment within DataViewActivity

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
     <color name="backgroundTransparent">#cc4fc3f7</color>
     <color name="wims">#00c2e8</color>
     <color name="cde">#00c292</color>
-    <color name="photo">#ef526d</color>
+    <color name="permit">#FFFF00</color>
 
 </resources>
