--- a/android/app/src/main/res/layout/activity_data_view.xml
+++ b/android/app/src/main/res/layout/activity_data_view.xml
@@ -21,15 +21,15 @@
         android:visibility="invisible" />
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/cam_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="90dp"
-        android:src="@drawable/photo_icon" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/cam_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_marginEnd="20dp"-->
+        <!--android:layout_marginBottom="20dp"-->
+        <!--android:layout_marginTop="90dp"-->
+        <!--android:src="@drawable/photo_icon" />-->
 
     <!--<android.support.design.widget.FloatingActionButton-->
         <!--android:id="@+id/sp_view_button"-->
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:layout_gravity="bottom|end"
         android:onClick="currentLocation"
