--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -35,13 +35,16 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">11sp</item>
-        <item name="android:padding">1dip</item>
+        <item name="android:padding">3dip</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:layout_weight">1</item>
     </style>
 
     <style name="TextViewPhotoTableChild" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">11sp</item>
-        <item name="android:padding">1dip</item>
+        <item name="android:padding">3dip</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">2</item>
         <item name="android:layout_weight">1</item>
