--- a/android/app/src/main/res/layout/fragment_cde_details_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_details_view.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FF000000"
+        android:background="#000000"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/cde_details_toolbar"
         android:minHeight="?attr/actionBarSize"
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/backgroundDefault"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/cde_details_title"
@@ -47,32 +48,77 @@
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
+            <TextView
+                android:id="@+id/cde_classification_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="start"
+                android:text="@string/cde_classification_title"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
             <TableLayout
                 style="@style/TextViewDataTableParent"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/cde_details_table"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
+                android:layout_height="wrap_content"
                 android:gravity="top">
-                <TableRow
-                    android:layout_width="match_parent">
-                    <TextView
-                        android:text=""/>
-                    <TextView
-                        style="@style/TextViewDataTableParent"
-                        android:text="@string/cde_table_classification_value"/>
-                    <TextView
-                        style="@style/TextViewDataTableParent"
-                        android:text="@string/cde_table_classification_certainty"/>
-                    <TextView
-                        style="@style/TextViewDataTableParent"
-                        android:text="@string/cde_table_classification_year"/>
-                </TableRow>
+
+                <!--<TableRow-->
+                    <!--android:layout_width="match_parent">-->
+                    <!--<TextView-->
+                        <!--android:text=""-->
+                        <!--android:layout_weight="0.4"/>-->
+                    <!--<TextView-->
+                        <!--style="@style/TextViewDataTableParent"-->
+                        <!--android:text="@string/cde_table_classification_value"-->
+                        <!--android:layout_weight="0.25"/>-->
+                    <!--<TextView-->
+                        <!--style="@style/TextViewDataTableParent"-->
+                        <!--android:text="@string/cde_table_classification_certainty"-->
+                        <!--android:layout_weight="0.25"/>-->
+                    <!--<TextView-->
+                        <!--style="@style/TextViewDataTableParent"-->
+                        <!--android:text="@string/cde_table_classification_year"-->
+                        <!--android:layout_weight="0.1"/>-->
+                <!--</TableRow>-->
             </TableLayout>
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/cde_rnag_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:padding="8dp"
+                android:gravity="start"
+                android:text="@string/cde_rnag_title"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
+            <TableLayout
+                style="@style/TextViewDataTableParent"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/cde_rnag_table"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top">
+            </TableLayout>
+
+            <TextView
+                android:id="@+id/cde_objectives_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_marginTop="16dp"
+                android:gravity="start"
+                android:text="@string/cde_objectives_title"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
