--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -19,32 +19,21 @@
 
     <style name="TextViewDataTableParent" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/darkGrey</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:padding">3dip</item>
+        <item name="android:paddingStart">8dip</item>
+        <item name="android:paddingEnd">8dip</item>
         <item name="android:gravity">center</item>
     </style>
 
     <style name="TextViewDataTableChild" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/colorPrimaryDark</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:padding">3dip</item>
-        <item name="android:gravity">center</item>
-    </style>
-
-    <style name="TextViewPhotoTableParent" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">11sp</item>
-        <item name="android:padding">3dip</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:maxLines">2</item>
-        <item name="android:layout_weight">1</item>
-    </style>
-
-    <style name="TextViewPhotoTableChild" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">11sp</item>
-        <item name="android:padding">3dip</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">8dip</item>
+        <item name="android:paddingEnd">8dip</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">2</item>
         <item name="android:layout_weight">1</item>
