--- a/android/app/src/main/res/layout/fragment_cde_details_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_details_view.xml
@@ -32,6 +32,7 @@
         android:fillViewport="true">
 
         <LinearLayout
+            android:id = "@+id/cde_details_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/backgroundDefault"
