--- a/android/app/src/main/res/layout/fragment_cde_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_data_view.xml
@@ -62,7 +62,9 @@
         android:textSize="18sp"
         android:textColor="@color/colorPrimaryDark"
         android:textAlignment="center"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
+
 
         <TableLayout
             style="@style/TextViewDataTableParent"
@@ -70,7 +72,8 @@
             android:id="@+id/cde_table"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:stretchColumns="1,2">
+            android:stretchColumns="1,2"
+            android:layout_marginBottom="10dp">
             <TableRow>
                 <TextView
                     android:text=""/>
