Pull metals from WIMS API

--- a/android/app/src/main/res/layout/fragment_wims_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_wims_data_view.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:clickable="true"
-        android:background="#cc4fc3f7">
+        android:background="#4fc3f7">
 
         <TextView
             android:text=""
